# dugout

./: .gitignore  README.md  pyproject.toml
data-exploration/: explore.py
src/: fetcher.py  main.py
src/data/: mlb_stats.db
src/utils/: context_builder.py  fetcher.py
